# 2D_Adventures

./: CMakeLists.txt  LICENSE  LICENSE_raygui.txt  MANUAL.txt  README.md  build_ninja_linux.sh  generate_headers.py  installer.nsi
doc/: sources.txt
res/: Level2..csv  Level2.csv  TestMap.csv
src/: Assert.h  ChestUI.cpp  ChestUI.h  Crafting.cpp  Crafting.h  DroppedItem.h  EndBoss.cpp  EndBoss.h  Enemy.cpp  Enemy.h  Functional.h  Inventory.cpp  Inventory.h  Level.cpp  Level.h  Player.cpp  Player.h  Slime.cpp  Slime.h  Stringify.h  Tile.h  icon.rc  icons.h  main.cpp
